--- a/src/app/pages/constellation/constellation.component.css
+++ b/src/app/pages/constellation/constellation.component.css
@@ -1,3 +1,11 @@
 p {
   color: white;
 }
+
+#constForm {
+  padding-left: 2px; 
+  padding-right: 2px;
+  padding-top: 2px; 
+  padding-bottom: 2px;
+  border-radius: 0.375rem;
+}
