--- a/src/app/pages/geolocation/geolocation.component.css
+++ b/src/app/pages/geolocation/geolocation.component.css
@@ -1,1 +1,21 @@
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
+
+#popularForm {
+    padding-left: 2px; 
+    padding-right: 2px;
+    padding-top: 2px; 
+    padding-bottom: 2px;
+    border-radius: 0.375rem;
+}
+
+.submit {
+    padding: 5px 10px 5px 10px;
+    border-radius: 0.4rem;
+    background-color: white;
+}
 
