--- a/src/app/pages/constellation/constellation.component.css
+++ b/src/app/pages/constellation/constellation.component.css
@@ -9,3 +9,9 @@ p {
   padding-bottom: 2px;
   border-radius: 0.375rem;
 }
+
+.submit {
+  padding: 5px 10px 5px 10px;
+  border-radius: 0.4rem;
+  background-color: rgb(214, 135, 135);
+}
