--- a/src/app/pages/constellation/constellation.component.html
+++ b/src/app/pages/constellation/constellation.component.html
@@ -1,4 +1,3 @@
-<p>drop down based on static array</p>
 <p>confirm selection, add to right sidebar?</p>
 
 <form [formGroup]="constellationForm" (ngSubmit)="submit()">
@@ -7,5 +6,7 @@
     <option *ngFor="let constellation of constellations" [ngValue]="constellation.name">{{constellation.name}}</option>
   </select>
   <br>
-  <button type="submit">Submit</button>
+  <button class="submit" type="submit">Submit</button>
+
+  <p>{{selected}}</p>
 </form>
