--- a/src/app/pages/geolocation/geolocation.component.css
+++ b/src/app/pages/geolocation/geolocation.component.css
@@ -16,6 +16,6 @@
 .submit {
     padding: 5px 10px 5px 10px;
     border-radius: 0.4rem;
-    background-color: white;
+    background-color: rgb(214, 135, 135);
 }
 
