--- a/src/app/pages/geolocation/geolocation.component.html
+++ b/src/app/pages/geolocation/geolocation.component.html
@@ -1,15 +1,11 @@
 Short Description of purpose for user- output is based on current position on Earth.
 
-drop-down? menu with list of locations saved for the user
-
-option to add hotspot or custom location based on long/lat
-
 A submit button to save/update/delete the choice
 
 List for saved locations
 
 List home location details, name+long+lat
-Current home location: {{location}};
+Current home location: {{location.longitude}}, {{location.latitude}};
 <br>
 
 <p>Add popular location</p>
@@ -17,7 +13,7 @@ Current home location: {{location}};
 <form [formGroup]="geolocationForm" (ngSubmit)="submit()">
   <select id="popularForm" formName="geolocationPicker" formControlName="geolocation">
     <option [ngValue]="null" disabled>Select Country</option>
-    <option *ngFor="let geolocation of geolocations" [ngValue]="geolocation.name">{{geolocation.name}}</option>
+    <option *ngFor="let geolocation of geolocations" [ngValue]="geolocation">{{geolocation.name}}</option>
   </select>
   <br>
   <button class="submit" type="submit">Submit</button>
@@ -25,14 +21,14 @@ Current home location: {{location}};
 </div>
 
 <p>List of saved locations</p>
-buttons for update and delete 
-<div *ngFor="let location of retrievedLocations; let myIndex=index;">
-  {{location}} <button (click)="deleteLocation(myIndex)">Remove</button>
-  <button (click)="updateLocation(myIndex)">Update</button>
+
+<div *ngFor="let location of retrievedLocations">
+  {{location.name}}, {{location.latitude}} <button class="submit" (click)="deleteLocation(location)">Remove</button>
+  <button class="submit" (click)="updateLocation(location)">Update</button>
 </div>
 
 <p>menu to add location by inputting long/lat</p>
-would need to add all the variables the geolocation object in storage has
+
 <div class="form-container">
 <form [formGroup]="addLocationForm" (ngSubmit)="onSubmit()">
   <input type="text" formControlName="name" placeholder="Enter location name"><br>
