--- a/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
+++ b/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
@@ -3,12 +3,12 @@
   <div class="selection">
   <p>Select two planets to find their harmonic relationship</p>
   <form [formGroup]="harmonicForm">
-    <select formName="planetPicker1" formControlName="planet1" class="mx-5">
+    <select formName="planetPicker1" formControlName="planet1" class="selectOpts">
       <option [ngValue]="null" disabled>Select First Planet</option>
       <option *ngFor="let planet1 of planetSelectionOne" [ngValue]="planet1.name">{{planet1.name}}</option>
     </select>
 
-    <select formName="planetPicker2" formControlName="planet2">
+    <select formName="planetPicker2" formControlName="planet2" class="selectOpts">
       <option [ngValue]="null" disabled>Select Second Planet</option>
       <option *ngFor="let planet2 of planetSelectionTwo" [ngValue]="planet2.name">{{planet2.name}}</option>
     </select>
