--- a/src/app/pages/sky-condition/sky-condition.component.html
+++ b/src/app/pages/sky-condition/sky-condition.component.html
@@ -30,10 +30,10 @@
 </div>
 
 <!--.data is component of api's response-->
-<div class="horizon">
+<!-- <div class="horizon">
   <p>Planet @ constellation, <br>time: above horizon</p><br>
   <div class="horizonData" *ngFor="let item of apiList2.data">{{item.name}} @ {{item.constellation}}, time: {{item.rightAscension.hours}}: {{item.rightAscension.minutes}}</div>
-</div>
+</div> -->
 
 <div class="save">
 <button (click)="submit()" class="bg-white px-5 py-2 rounded-md shadow-xl">Take snapshot</button>
