--- a/src/app/pages/sky-condition/sky-condition.component.css
+++ b/src/app/pages/sky-condition/sky-condition.component.css
@@ -5,7 +5,7 @@
 .grid-container {
   display: grid;
   grid-template-areas:
-    'left right'
+    'left left'
     'bottom bottom';
   gap: 10px;
   background-color: rgba(50, 50, 50, .85);
@@ -34,32 +34,147 @@
   transform: rotate(var(--rotate));
 }
 
-.ares::after {
-  content: "ares";
-  color: white;
+.aresLabel, .taurusLabel, .geminiLabel, .cancerLabel, .leoLabel, .virgoLabel, .libraLabel, .scorpioLabel, .sagittariusLabel, .capricornLabel, .aquariusLabel, .piscesLabel {
   position: absolute;
-  top: -125px;
+  height: 50%;
+  width: 2px;
+  top: 0%;
   left: 50%;
-  transform: translateX(-50%);
+  transform-origin: 50% 100%;
+  transform: rotate(var(--rotate));
 }
 
-.taurus::after {
-  content: "taurus";
-  color:white;
+.aresLabel::before {
+  content: "";
   position: absolute;
-  top: -125px;
-  left: 50%;
-  transform: translateX(-50%);
-} 
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Aries.svg.png");
+  background-size: cover;
+}
 
-.gemini::after {
-  content: "gemini";
-  color: white;
+.taurusLabel::before {
+  content: "";
   position: absolute;
-  top: -125px;
-  left: 50%;
-  transform: translateX(-50%);
-} 
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Taurus.svg.png");
+  background-size: cover;
+}
+
+.geminiLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Gemini.svg.png");
+  background-size: cover;
+}
+
+.cancerLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Cancer.svg.png");
+  background-size: cover;
+}
+
+.leoLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Leo.svg.png");
+  background-size: cover;
+}
+
+.virgoLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Virgo.svg.png");
+  background-size: cover;
+}
+
+.libraLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Libra.svg.png");
+  background-size: cover;
+}
+
+.scorpioLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Scorpius.svg.png");
+  background-size: cover;
+}
+
+.sagittariusLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Sagittarius.svg.png");
+  background-size: cover;
+}
+
+.capricornLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Capricornus.svg.png");
+  background-size: cover;
+}
+
+.aquariusLabel::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/Aquarius.svg.png");
+  background-size: cover;
+}
+
+.pisces::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../assets/images/pisces.svg.png");
+  background-size: cover;
+}
 
 .mercury, .venus, .mars, .jupiter, .saturn, .uranus, .neptune, .pluto {
   position: absolute;
@@ -71,10 +186,6 @@
   transform-origin: 50% 100%;
   transform: rotate(var(--rotate));
 }
-
-/* .mercury:hover {
-  content: "mercury";
-} */
 
 /*normalized planet sizes
 1500, 3800, (4000), 2100, 43400, 36200, 15800, 15300, 715*/
@@ -95,6 +206,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.mercury:hover::before {
+  content: "mercury";
+  opacity: 1;
 }
 
 .venus::before {
@@ -113,6 +232,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.venus:hover::before {
+  content: "venus";
+  opacity: 1;
 }
 
 .mars::before {
@@ -131,6 +258,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.mars:hover::before {
+  content: "mars";
+  opacity: 1;
 }
 
 .jupiter::before {
@@ -149,6 +284,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.jupiter:hover::before {
+  content: "jupiter";
+  opacity: 1;
 }
 
 .saturn::before {
@@ -167,6 +310,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.saturn:hover::before {
+  content: "saturn";
+  opacity: 1;
 }
 
 .uranus::before {
@@ -185,6 +336,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.uranus:hover::before {
+  content: "uranus";
+  opacity: 1;
 }
 
 .neptune::before {
@@ -203,6 +362,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+  
+.neptune:hover::before {
+  content: "neptune";
+  opacity: 1;
 }
 
 .pluto::before {
@@ -221,6 +388,14 @@
     inset 0 0 20px rgba(0,0,0,0.3),
     inset 0 0 30px rgba(0,0,0,0.2),
     inset 0 0 40px rgba(0,0,0,0.1);
+  opacity: 0.95;
+  transition: opacity 0.2s;
+  white-space: nowrap;
+}
+
+.pluto:hover::before {
+  content: "pluto";
+  opacity: 1;
 }
 
 .horizon {
