--- a/src/app/components/rightbar/rightbar.component.css
+++ b/src/app/components/rightbar/rightbar.component.css
@@ -16,3 +16,16 @@
     margin-left: 45px;
     margin-bottom: 20px;
   }
+
+  .comment {
+    background-color:rgb(214, 135, 135);
+    color: white;
+    margin: 5px;
+  }
+
+  .commentbtn {
+    padding: 5px 10px 5px 10px;
+    border-radius: 0.4rem;
+    background-color: rgb(214, 135, 135);
+    color: white;
+  }
