--- a/src/app/components/rightbar/rightbar.component.html
+++ b/src/app/components/rightbar/rightbar.component.html
@@ -10,11 +10,11 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit Comment</button>
+    <button type="submit" class="commentbtn">Submit Comment</button>
 </form>
 
-<p>render comments from DB - have them update when new comment is added</p>
-<div *ngFor="let comment of comments">
+<p>Comment section</p>
+<div *ngFor="let comment of comments" class="comment">
     <p>{{comment.comment}}</p>
     <p>{{comment.created_at}}</p>
 </div>
