--- a/src/app/pages/geolocation/geolocation.component.css
+++ b/src/app/pages/geolocation/geolocation.component.css
@@ -19,3 +19,11 @@
     background-color: rgb(214, 135, 135);
 }
 
+.geoTable {
+    background-color: rgba(50, 50, 50, .45);
+    color: white;
+}
+
+td {
+    width: 200px;
+}
