--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,8 @@
   </ul>
   <ul class="flex gap-5 items-center">
     <li class="hover:underline hover:underline-offset-4"><a routerLink="/">Home</a></li>
-    <button routerLink="/login" class="bg-white px-5 py-2 text-blue rounded-md shadow-xl transition hover:ease-out hover:scale-110 duration-300">Login</button>
-    <button routerLink="/register" class="bg-white px-5 py-2 text-blue rounded-md shadow-xl transition hover:ease-out hover:scale-110 duration-300">Sign Up</button>
+    <button *ngIf="!authService.isAuthenticated()" routerLink="/login" class="access-btns">Login</button>
+    <button *ngIf="!authService.isAuthenticated()" routerLink="/register" class="access-btns">Sign Up</button>
+    <button *ngIf="authService.isAuthenticated()" (click)="logout()" class="access-btns">Logout</button>
   </ul>
 </nav>
