--- a/src/app/components/rightbar/rightbar.component.css
+++ b/src/app/components/rightbar/rightbar.component.css
@@ -35,3 +35,10 @@
   background-color: rgb(214, 135, 135);
   color: white;
 }
+
+.comments-btn2 {
+  padding: 5px 10px 5px 10px;
+  border-radius: 0.4rem;
+  background-color: rgb(241, 149, 62);
+  color: white;
+}
