--- a/src/app/components/rightbar/rightbar.component.html
+++ b/src/app/components/rightbar/rightbar.component.html
@@ -18,7 +18,12 @@
 <div *ngFor="let comment of comments" class="comment">
     <p>{{comment.comment}}</p>
     <p>{{comment.created_at | date: 'medium'}}</p>
-    <button *ngIf="userIdCheck(comment.userId)" (click)="delete(comment.id)">delete</button>
+    <p>{{comment.edited_at | date: 'medium'}}</p>
+
+    <app-editcomment [editedComment]="comment" (onSave)="saveEditedComment($event)" (onCancel)="cancelEditComment(comment)" *ngIf="comment.isEditing"></app-editcomment>
+
+    <button *ngIf="userIdCheck(comment.userId)" (click)="delete(comment)" class="comments-btn2">delete</button>
+    <button *ngIf="userIdCheck(comment.userId)" (click)="enableEdit(comment)" class="comments-btn2">edit</button>
 </div>
 
 </div>
