more comments work

--- a/src/app/components/rightbar/editcomment/editcomment.component.html
+++ b/src/app/components/rightbar/editcomment/editcomment.component.html
@@ -1,5 +1,5 @@
 <div>
-    <input type="text" [(ngModel)]="editedComment!.comment" />
-    <button (click)="saveComment()">Save</button>
-    <button (click)="cancelEdit()">Cancel</button>
+    <input type="text" [(ngModel)]="editedComment!.comment" class="input-box" />
+    <button (click)="saveComment()" class="edit-btn">Save</button>
+    <button (click)="cancelEdit()" class="edit-btn">Cancel</button>
 </div>
