--- a/src/app/components/rightbar/rightbar.component.html
+++ b/src/app/components/rightbar/rightbar.component.html
@@ -17,13 +17,14 @@
 <p>Comment section</p>
 <div *ngFor="let comment of comments" class="comment">
     <p>{{comment.comment}}</p>
+    <p>{{comment.username}}</p>
     <p>{{comment.created_at | date: 'medium'}}</p>
     <p>{{comment.edited_at | date: 'medium'}}</p>
 
     <app-editcomment [editedComment]="comment" (onSave)="saveEditedComment($event)" (onCancel)="cancelEditComment(comment)" *ngIf="comment.isEditing"></app-editcomment>
     <span *ngIf="!isEditing">
-    <button *ngIf="userIdCheck(comment.userId)" (click)="delete(comment)" class="comments-btn2">delete</button>
-    <button *ngIf="userIdCheck(comment.userId)" (click)="enableEdit(comment)" class="comments-btn2">edit</button>
+        <button *ngIf="userIdCheck(comment.userId)" (click)="enableEdit(comment)" class="comments-btn2">edit</button>
+        <button *ngIf="userIdCheck(comment.userId)" (click)="delete(comment)" class="comments-btn2">delete</button>
     </span>
 </div>
 
