--- a/src/app/pages/constellation/constellation.component.html
+++ b/src/app/pages/constellation/constellation.component.html
@@ -14,3 +14,5 @@
 <div>
   <img class="constImg" [src]="selectedConstellation?.imgURL" *ngIf="selectedConstellation?.imgURL">
 </div>
+
+<p>this can be 1:1, 1:2, 1:4, etc..just need to figure out how to get the data here</p>
