how many is there

--- a/src/app/pages/view-saved-date/view-saved-date.component.css
+++ b/src/app/pages/view-saved-date/view-saved-date.component.css
@@ -175,7 +175,7 @@
   left: 0px;
   width: 50px;
   height: 50px;
-  background-image: url("../../../assets/images/pisces.svg.png");
+  background-image: url("../../../assets/images/Pisces.svg.png");
   background-size: cover;
 }
 
