--- a/src/app/components/rightbar/rightbar.component.html
+++ b/src/app/components/rightbar/rightbar.component.html
@@ -14,18 +14,21 @@
     <button type="submit" class="commentbtn">Submit Comment</button>
 </form>
 
-<p>Comment section</p>
 <div *ngFor="let comment of comments" class="comment">
+
+    <span class="comment-username">{{comment.username}}</span>
     <p>{{comment.comment}}</p>
-    <p>{{comment.username}}</p>
-    <p>{{comment.created_at | date: 'medium'}}</p>
-    <p>{{comment.edited_at | date: 'medium'}}</p>
+    <span class="comment-time">
+        {{comment.created_at===comment.edited_at ? 'Posted: ' : 'Edited: '}}{{comment.edited_at | date: 'medium'}}
+    </span>
+    <br>
 
     <app-editcomment [editedComment]="comment" (onSave)="saveEditedComment($event)" (onCancel)="cancelEditComment(comment)" *ngIf="comment.isEditing"></app-editcomment>
     <span *ngIf="!isEditing">
         <button *ngIf="userIdCheck(comment.userId)" (click)="enableEdit(comment)" class="comments-btn2">edit</button>
         <button *ngIf="userIdCheck(comment.userId)" (click)="delete(comment)" class="comments-btn2">delete</button>
     </span>
+
 </div>
 
 </div>
