--- a/src/app/pages/geolocation/geolocation.component.css
+++ b/src/app/pages/geolocation/geolocation.component.css
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+}
+
+.addLocationForm {
+    background-color: rgba(50, 50, 50, .45);
 }
 
 #popularForm {
@@ -25,5 +28,6 @@
 }
 
 td {
+    background-color: rgba(50, 50, 50, .45);
     width: 200px;
 }
